cmake_minimum_required(VERSION 3.9)
project(PAT-Cpp)

set(CMAKE_CXX_STANDARD 11)

add_executable(main main.cpp)
add_executable(Test Test.cpp)
add_executable(Template Template.cpp)

add_executable(Test26040 Codeup/100000569-2.5/Test26040.cpp)
add_executable(Test26041 Codeup/100000569-2.5/Test26041.cpp)
add_executable(Test26044 Codeup/100000569-2.5/Test26044.cpp)
add_executable(Test26045 Codeup/100000569-2.5/Test26045.cpp)
add_executable(Test26049 Codeup/100000569-2.5/Test26049.cpp)
add_executable(Test26050 Codeup/100000569-2.5/Test26050.cpp)
add_executable(Test26051 Codeup/100000569-2.5/Test26051.cpp)
add_executable(Test26052 Codeup/100000569-2.5/Test26052.cpp)
add_executable(Test26055 Codeup/100000569-2.5/Test26055.cpp)
add_executable(Test26339 Codeup/100000570-2.6/Test26339.cpp)
add_executable(Test26340 Codeup/100000570-2.6/Test26340.cpp)
add_executable(Test1269 Codeup/100000571-2.7/Test1269.cpp)
add_executable(Test1270 Codeup/100000571-2.7/Test1270.cpp)
add_executable(Test1278 Codeup/100000571-2.7/Test1278.cpp)
add_executable(Test1283 Codeup/100000571-2.7/Test1283.cpp)
add_executable(Test1284 Codeup/100000571-2.7/Test1284.cpp)
add_executable(Test1303 Codeup/100000572-2.8/Test1303.cpp)
add_executable(Test1304 Codeup/100000572-2.8/Test1304.cpp)
add_executable(Test1310 Codeup/100000572-2.8/Test1310.cpp)
add_executable(Test1306 Codeup/100000572-2.8/Test1306.cpp)
add_executable(Test1309 Codeup/100000572-2.8/Test1309.cpp)
add_executable(Test1000 Codeup/100000574-2.10/Test1000.cpp)
add_executable(Test1002 Codeup/100000574-2.10/Test1002.cpp)
add_executable(Test1003 Codeup/100000574-2.10/Test1003.cpp)
add_executable(Test1006 Codeup/100000574-2.10/Test1006.cpp)
add_executable(Test1007 Codeup/100000574-2.10/Test1007.cpp)
add_executable(Test1814 Codeup/100000575-3.1/Test1814.cpp)
add_executable(Test1817 Codeup/100000575-3.1/Test1817.cpp)
add_executable(Test1906 Codeup/100000575-3.1/Test1906.cpp)
add_executable(Test2036 Codeup/100000575-3.1/Test2036.cpp)
add_executable(Test6116 Codeup/100000575-3.1/Test6116.cpp)
add_executable(Test6116a Codeup/100000575-3.1/Test6116.cpp)
add_executable(Test6128 Codeup/100000575-3.1/Test6128.cpp)
add_executable(Test6129 Codeup/100000575-3.1/Test6129.cpp)
add_executable(Test6170 Codeup/100000575-3.1/Test6170.cpp)
add_executable(Test6172 Codeup/100000575-3.1/Test6172.cpp)
add_executable(Test1934 Codeup/100000576-3.2/Test1934.cpp)
add_executable(Test1932 Codeup/100000576-3.2/Test1932.cpp)
add_executable(Test1935 Codeup/100000576-3.2/Test1935.cpp)
add_executable(Test1937 Codeup/100000576-3.2/Test1937.cpp)
add_executable(Test2020 Codeup/100000576-3.2/Test2020.cpp)
add_executable(Test1933 Codeup/100000577-3.3/Test1933.cpp)
add_executable(Test2003 Codeup/100000577-3.3/Test2003.cpp)
add_executable(Test2506 Codeup/100000577-3.3/Test2506.cpp)
add_executable(Test1993 Codeup/100000577-3.3/Test1993.cpp)
add_executable(Test1928 Codeup/100000578-3.4/Test1928.cpp)
add_executable(Test1929 Codeup/100000578-3.4/Test1929.cpp)
add_executable(Test1931 Codeup/100000578-3.4/Test1931.cpp)
add_executable(Test2026 Codeup/100000578-3.4/Test2026.cpp)
add_executable(Test2063 Codeup/100000578-3.4/Test2063.cpp)
add_executable(Test1941 Codeup/100000579-3.5/Test1941.cpp)
add_executable(Test1942 Codeup/100000579-3.5/Test1942.cpp)
add_executable(Test1943 Codeup/100000579-3.5/Test1943.cpp)
add_executable(Test1944 Codeup/100000579-3.5/Test1944.cpp)
add_executable(Test1785 Codeup/100000580-3.6/Test1785.cpp)

add_executable(SelectionSort Algorithm/SelectionSort.cpp)
add_executable(InsertionSort Algorithm/InsertionSort.cpp)
add_executable(BubbleSort Algorithm/BubbleSort.cpp)

add_executable(B1001 PAT/B1001.cpp)
add_executable(B1032 PAT/B1032.cpp)
add_executable(B1023 PAT/B1023.cpp)
add_executable(B1057 PAT/B1057.cpp)
add_executable(B1013 PAT/B1013.cpp)
add_executable(B1042 PAT/B1042.cpp)
add_executable(B1047 PAT/B1047.cpp)
add_executable(B1063 PAT/B1063.cpp)
add_executable(B1004 PAT/B1004.cpp)
add_executable(B1036 PAT/B1036.cpp)
add_executable(B1022 PAT/B1022.cpp)
add_executable(B1018 PAT/B1018.cpp)
add_executable(B1055 PAT/B1055.cpp)
add_executable(B1058 PAT/B1058.cpp)
add_executable(B1070 PAT/B1070.cpp)
add_executable(B1066 PAT/B1066.cpp)
add_executable(B1064 PAT/B1064.cpp)
add_executable(B1077 PAT/B1077.cpp)
add_executable(B1005 PAT/B1005.cpp)
add_executable(B1059 PAT/B1059.cpp)
add_executable(B1075 PAT/B1075.cpp)
add_executable(B1084 PAT/B1084.cpp)
add_executable(B1081 PAT/B1081.cpp)
add_executable(B1083 PAT/B1083.cpp)
add_executable(B1082 PAT/B1082.cpp)
add_executable(B1085 PAT/B1085.cpp)
add_executable(B1080 PAT/B1080.cpp)
add_executable(B1051 PAT/B1051.cpp)
add_executable(B1028 PAT/B1028.cpp)
add_executable(B1071 PAT/B1071.cpp)
add_executable(A1069 PAT/A1069.cpp)
add_executable(B1019 PAT/B1019.cpp)
add_executable(A1025 PAT/A1025.cpp)
add_executable(B1054 PAT/B1054.cpp)
add_executable(B1067 PAT/B1067.cpp)
add_executable(B1065 PAT/B1065.cpp)
add_executable(B1048 PAT/B1048.cpp)
add_executable(B1014 PAT/B1014.cpp)
add_executable(B1015 PAT/B1015.cpp)
add_executable(B1003 PAT/B1003.cpp)
add_executable(B1052 PAT/B1052.cpp)
add_executable(B1033 PAT/B1033.cpp)
add_executable(B1074 PAT/B1074.cpp)
add_executable(Test1805 Codeup/100000580-3.6/Test1805.cpp)
add_executable(Test1808 Codeup/100000580-3.6/Test1808.cpp)
add_executable(Test1962 Codeup/100000580-3.6/Test1962.cpp)
add_executable(Test1963 Codeup/100000580-3.6/Test1963.cpp)
add_executable(Test1967 Codeup/100000580-3.6/Test1967.cpp)
add_executable(Test2025 Codeup/100000580-3.6/Test2025.cpp)
add_executable(Test2064 Codeup/100000580-3.6/Test2064.cpp)
add_executable(Test5901 Codeup/100000580-3.6/Test5901.cpp)
add_executable(B1024 PAT/B1024.cpp)
add_executable(A1001 PAT/A1001.cpp)
add_executable(A1005 PAT/A1005.cpp)
add_executable(A1035 PAT/A1035.cpp)
add_executable(A1082 PAT/A1082.cpp)
add_executable(A1077 PAT/A1077.cpp)
add_executable(A1019 PAT/A1019.cpp)
add_executable(A1027 PAT/A1027.cpp)
add_executable(A1058 PAT/A1058.cpp)
add_executable(A1031 PAT/A1031.cpp)
add_executable(A1011 PAT/A1011.cpp)
add_executable(A1006 PAT/A1006.cpp)
add_executable(A1036 PAT/A1036.cpp)
add_executable(A1042 PAT/A1042.cpp)
add_executable(A1046 PAT/A1046.cpp)
add_executable(A1065 PAT/A1065.cpp)
add_executable(A1002 PAT/A1002.cpp)
add_executable(A1009 PAT/A1009.cpp)
add_executable(A1012 PAT/A1012.cpp)
add_executable(A1012a PAT/A1012a.cpp)
add_executable(A1016 PAT/A1016.cpp)
add_executable(A1028 PAT/A1028.cpp)
add_executable(A1055 PAT/A1055.cpp)
add_executable(A1075 PAT/A1075.cpp)
add_executable(A1083 PAT/A1083.cpp)
add_executable(A1080 PAT/A1080.cpp)
add_executable(A1095 PAT/A1095.cpp)
add_executable(B1029 PAT/B1029.cpp)
add_executable(A1092 PAT/A1092.cpp)
add_executable(A1041 PAT/A1041.cpp)
add_executable(A1050 PAT/A1050.cpp)
add_executable(A1048 PAT/A1048_hash.cpp)
add_executable(A1112 PAT/A1112.cpp)
add_executable(IntervalGreedy Algorithm/IntervalGreedy.cpp)
add_executable(A1070 PAT/A1070.cpp)
add_executable(A1033 PAT/A1033.cpp)
add_executable(A1033a PAT/A1033a.cpp)
add_executable(A1037 PAT/A1037.cpp)
add_executable(A1067 PAT/A1067.cpp)
add_executable(A1038 PAT/A1038.cpp)
add_executable(BinarySearch Algorithm/BinarySearch.cpp)
add_executable(BinarySearchSqrt2 Algorithm/BinarySearchSqrt2.cpp)
add_executable(P133 P133.cpp)
add_executable(BinaryExponentiation Algorithm/BinaryExponentiation.cpp)
add_executable(A1044 PAT/A1044.cpp)
add_executable(A1048_BinarySearch PAT/A1048_BinarySearch.cpp)
add_executable(MergeSort Algorithm/MergeSort.cpp)
add_executable(QuickSort Algorithm/QuickSort.cpp)
add_executable(B1035 PAT/B1035.cpp)
add_executable(A1029 PAT/A1029.cpp)
add_executable(A1048_two_pointer PAT/A1048_two_pointer.cpp)
add_executable(B1030_two_pointer PAT/B1030_two_pointer.cpp)
add_executable(B1030_BinarySearch PAT/B1030_BinarySearch.cpp)
add_executable(A1010_mine PAT/A1010_mine.cpp)
add_executable(A1010_book PAT/A1010_book.cpp)
add_executable(B1040 PAT/B1040.cpp)
add_executable(B1045 PAT/B1045.cpp)
add_executable(A1104 PAT/A1104.cpp)
add_executable(A1008 PAT/A1008.cpp)
add_executable(A1049 PAT/A1049.cpp)
add_executable(B1034 PAT/B1034.cpp)
add_executable(A1081 PAT/A1081.cpp)
add_executable(B1062 PAT/B1062.cpp)
add_executable(A1015 PAT/A1015.cpp)
add_executable(A1078 PAT/A1078.cpp)
add_executable(A1059 PAT/A1059.cpp)